Contact me page updated and portfolio section content added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               </a>
               <p class="leading-relaxed text-justify">My role as a Student Mentor, in the Graphic Designing team
                 I have designed Instagram carousel posts with that, designed posters for events, and an event banner for
-                LinkedIn. 
+                LinkedIn.
                 <br>
                 I have worked with a team where i have enhanced my skills and learned something new in Adobe Illustrator
                 and worked on figma
@@ -148,9 +148,9 @@
       <div class="flex w-full mb-20 flex-wrap">
         <!-- <h1 class="text-3xl text-indigo-500 tracking-widest font-normal title-font mb-1" >Portfolio</h1> -->
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" id="Portfolio">Portfolio</h1>
-        <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn
-          asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep
-          jianbing selfies heirloom.</p>
+        <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-2xl font-light">My creatives include Social media posts,
+          Carousels, Flyers, School Banner, Brochures, Informative post, Collaboration post, Hiring post, Event Posters
+          and Banner, Website designs, Mobile app designs, etc.</p>
       </div>
       <div class="flex flex-wrap md:-m-2 -m-1">
         <div class="flex flex-wrap w-1/2">
@@ -189,9 +189,9 @@
   <section class="text-gray-600 body-font relative">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-12">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" id="Contact">Contact Us</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn
-          asymmetrical gentrify.</p>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" id="Contact">Contact Me</h1>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-xl font-light">Hit me up for
+          Future Project.</p>
       </div>
       <div class="lg:w-1/2 md:w-2/3 mx-auto">
         <div class="flex flex-wrap -m-2">
@@ -218,12 +218,12 @@
           </div>
           <div class="p-2 w-full">
             <button
-              class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+              class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
           </div>
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-            <a class="text-indigo-500">example@email.com</a>
-            <p class="leading-normal my-5">49 Smith St.
-              <br>Saint Cloud, MN 56301
+            <a class="text-indigo-500">jaspreet.work099@gmail.com | +91 6267438590</a>
+            <p class="leading-normal my-5">
+              Indore(M.P.), India
             </p>
             <span class="inline-flex">
               <a class="text-gray-500">
