--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
           </div>
         </div>
       </div>
+      <div class="p-2 w-full mt-8">
+        <button
+          class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Take a look at the complete portfolio</button>
+      </div>
     </div>
   </section>
 
