--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div class="md:p-2 p-1 w-full">
             <img alt="gallery" class="w-full h-full object-cover object-center block"
-              src="https://dummyimage.com/600x360">
+              src="./images/600 _ 360.jpg">
           </div>
         </div>
         <div class="flex flex-wrap w-1/2">
