--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="flex flex-wrap w-1/2">
           <div class="md:p-2 p-1 w-full">
             <img alt="gallery" class="w-full h-full object-cover object-center block"
-              src="https://dummyimage.com/601x361">
+              src="./images/601 _ 361.jpg">
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
