mailto link updated in a tag

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
           </div>
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-            <a class="text-indigo-500 text-m font-medium">jaspreet.work099@gmail.com</a>
+            <a class="text-indigo-500 text-m font-medium" href="mailto:jaspreet.work099@gmail.com" target="_blank">jaspreet.work099@gmail.com</a>
 
             <p class="leading-normal my-5">
               Indore(M.P.), India
