--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
         <div class="flex flex-wrap w-1/2">
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/500x300">
+              src="./images/500 _300.jpg">
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/501x301">
+              src="./images/501 _301.jpg">
           </div>
           <div class="md:p-2 p-1 w-full">
             <img alt="gallery" class="w-full h-full object-cover object-center block"
