Brochure Design mockup added in image gallery

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/502x302">
+              src="./images/502_302.jpg">
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
