Image gallery section fully updated

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/503x303">
+              src="./images/503_303.jpg">
           </div>
         </div>
       </div>
