--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="./images/portfolio.ico" type="image/x-icon">
+  <link rel="icon" href="./images/Pfp-icon.ico" type="image/x-icon">
   <title>Jaspreet Singh Saini - Portfolio</title>
 </head>
 
