--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-        <img class="object-cover object-center rounded-xl" alt="hero" src="./images/Hero Section image.jpg">
+        <img class="object-cover object-center rounded-xl" alt="hero" src="./images/Hero Section.jpg">
       </div>
     </div>
   </section>
