netlify form connected

--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
   </section>
   <hr>
   <!-- Contact section -->
+
+  <form name="contact" method="POST" data-netlify="true">
   <section class="text-gray-600 body-font relative">
     <div class="container px-5 py-6 mx-auto">
       <div class="flex flex-col text-center w-full mb-12">
@@ -222,7 +224,8 @@
             </div>
           </div>
           <div class="p-2 w-full">
-            <button
+            <!-- <input type="submit" value="Submit" name="submit" class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"> -->
+            <button type="submit"
               class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
           </div>
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
@@ -237,6 +240,7 @@
       </div>
     </div>
   </section>
+</form>
   <hr>
   <!-- footer section -->
   <footer class="text-gray-600 body-font">
