Hero Section font changed in description and title added in gallery section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </h1>
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-light text-gray-900">Graphic Designer
         </h1>
-        <p class="mb-10 leading-relaxed">Creative Graphic Designer and UI Developer with 1.5+ years of
+        <p class="mb-10 leading-relaxed font-medium">Creative Graphic Designer and UI Developer with 1.5+ years of
           experience. I strive to do my best with everything I do to achieve the desired outcome. Looking for
           opportunities to learn and gain more exposure in this field.</p>
         <div class="flex justify-center">
@@ -69,9 +69,7 @@
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
-        <!-- <h1 class="text-3xl text-indigo-500 tracking-widest font-medium title-font mb-2 " id="Experience">Experience</h1> -->
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" id="Experience">Experience</h1>
-        <!-- <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900"></h1> -->
       </div>
 
       <div class="flex flex-wrap -m-4">
@@ -147,7 +145,6 @@
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto flex flex-wrap">
       <div class="flex w-full mb-20 flex-wrap">
-        <!-- <h1 class="text-3xl text-indigo-500 tracking-widest font-normal title-font mb-1" >Portfolio</h1> -->
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" id="Portfolio">Portfolio</h1>
         <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-2xl font-light">My creatives include Social media posts,
           Carousels, Flyers, School Banner, Brochures, Informative post, Collaboration post, Hiring post, Event Posters
@@ -157,21 +154,21 @@
         <div class="flex flex-wrap w-1/2">
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="./images/500 _300.jpg">
+              src="./images/500 _300.jpg" title="Mobile App Design">
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="./images/501 _301.jpg">
+              src="./images/501 _301.jpg" title="Website Ui Design">
           </div>
           <div class="md:p-2 p-1 w-full">
             <img alt="gallery" class="w-full h-full object-cover object-center block"
-              src="./images/600 _ 360.jpg">
+              src="./images/600 _ 360.jpg" title="Instagram Post Design">
           </div>
         </div>
         <div class="flex flex-wrap w-1/2">
           <div class="md:p-2 p-1 w-full">
             <img alt="gallery" class="w-full h-full object-cover object-center block"
-              src="./images/601 _ 361.jpg">
+              src="./images/601 _ 361.jpg" title="Instagram Carousel Post Design">
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
