title added in gallery section

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="./images/502_302.jpg">
+              src="./images/502_302.jpg" title="Brochures Design">
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class="w-full object-cover h-full object-center block"
-              src="./images/503_303.jpg">
+              src="./images/503_303.jpg" title="Cards, Website UI, and Template design">
           </div>
         </div>
       </div>
