--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
 
 <body>
   <!-- header section -->
-  <header class="text-gray-600 body-font">
+  <header class="text-gray-600 body-font mt-8">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-
-        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-        </svg>
-        <span class="ml-3 text-xl">Portfolio</span>
+        <img src="./images/Jaspreet.Designs dark.png" alt="Logo" width="160px">
+        <!-- <span class="ml-3 text-xl">Portfolio</span> -->
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900" href="#Home">Home</a>
-        <a class="mr-5 hover:text-gray-900" href="#Experience">Experience</a>
-        <a class="mr-5 hover:text-gray-900" href="#Portfolio">Portfolio</a>
-        <a class="mr-5 hover:text-gray-900" href="#Contact">Contact</a>
+        <a class="navbtn mr-7 font-medium" href="#Home">Home</a>
+        <a class="navbtn mr-7 font-medium" href="#Experience">Experience</a>
+        <a class="navbtn mr-7 font-medium" href="#Portfolio">Portfolio</a>
+        <a class="navbtn mr-7 font-medium" href="#Contact">Contact</a>
       </nav>
       <button
-        class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"><a
+        class="PrimaryBtn inline-flex items-center font-medium   mt-4 md:mt-0"><a
           href="./Jaspreet Singh Saini-Resume.pdf" target="_blank"> Resume </a>
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           class="w-4 h-4 ml-1" viewBox="0 0 24 24">
@@ -52,10 +50,10 @@
           opportunities to learn and gain more exposure in this field.</p>
         <div class="flex justify-center">
           <button
-            class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a
+            class="PrimaryBtn  text-lg"><a
               href="#Portfolio">Designs</a></button>
           <button
-            class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"><a
+            class="SecondaryBtn ml-4 text-lg"><a
               href="#Contact">Contact</a></button>
         </div>
       </div>
@@ -182,7 +180,7 @@
       </div>
       <div class="p-2 w-full mt-8">
         <button
-          class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" ><a href="https://drive.google.com/drive/u/4/folders/1cXNhnbbNNXscatsXbpHVYURcbc2JHm52" target="_blank"> Take a look at the complete portfolio</a></button>
+          class="PrimaryBtn flex mx-auto text-lg capitalize" ><a href="https://drive.google.com/drive/u/4/folders/1cXNhnbbNNXscatsXbpHVYURcbc2JHm52" target="_blank"> Take a look at the complete portfolio</a></button>
       </div>
     </div>
   </section>
@@ -223,7 +221,7 @@
           <div class="p-2 w-full">
             <!-- <input type="submit" value="Submit" name="submit" class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"> -->
             <button type="submit"
-              class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
+              class="PrimaryBtn flex mx-auto  text-xl">Submit</button>
           </div>
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
             <a class="text-indigo-500 text-m font-medium" href="mailto:jaspreet.work099@gmail.com" target="_blank">jaspreet.work099@gmail.com</a>
