--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
         
-        <span class="ml-3 text-xl">Portfolio V2</span>
+        <span class="ml-3 text-xl">Portfolio</span>
       </a>
       <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">
         <a href="https://www.instagram.com/jaspreet.designs/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@jaspreet.designs</a>
