--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
       <button
         class="PrimaryBtn inline-flex items-center font-medium   mt-4 md:mt-0"><a
-          href="./Jaspreet Singh Saini-Resume.pdf" target="_blank"> Resume </a>
+          href="./Jaspreet Singh Saini - UX Resume.pdf" target="_blank"> Resume </a>
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           class="w-4 h-4 ml-1" viewBox="0 0 24 24">
           <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -43,11 +43,11 @@
         class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-2 font-bold text-gray-900">Jaspreet Singh Saini
         </h1>
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-light text-gray-900">Graphic Designer
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-light text-gray-900">UX/UI Designer
         </h1>
-        <p class="mb-10 leading-relaxed font-medium">Creative Graphic Designer and UI Developer with 1.5+ years of
-          experience. I strive to do my best with everything I do to achieve the desired outcome. Looking for
-          opportunities to learn and gain more exposure in this field.</p>
+        <p class="mb-10 leading-relaxed font-medium">I’m a UX/UI Designer with over 1.5+ years of experience crafting beautiful User-friendly Digital Experiences that make sense.
+
+I have a solid understanding of the design process and am experienced in designing user interfaces, wireframes, and prototyping. I am highly motivated and capable of working in a fast-paced environment.</p>
         <div class="flex justify-center">
           <button
             class="PrimaryBtn  text-lg"><a
@@ -71,6 +71,26 @@
       </div>
 
       <div class="flex flex-wrap -m-4">
+        <div class="p-4 md:w-1/3">
+          <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
+            <div class="flex items-center mb-1">
+              <h2 class="text-2xl text-gray-900 text-lg title-font font-medium">Indianpreneur</h2>
+            </div>
+            <div class="flex-grow">
+              <a class="text-lg mt-1 text-indigo-500 inline-flex items-center">Magazine Designer Intern
+              </a>
+              <p class="leading-relaxed text-justify">The first month of my internship I did research regarding the magazine design.
+                 Then, I ve started designing magazines, The first magazine is related to Top Influential Indianpreneurs and
+                the one is based on EV Industry.'
+                 
+                <br>
+                In the short span of time, I designed two long magazines and gained lifetime experience on about Magazine
+                Industry
+              </p>
+
+            </div>
+          </div>
+        </div>
         <div class="p-4 md:w-1/3">
           <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
             <div class="flex items-center mb-1">
