--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
+  <p class="stickertag flex h-10 items-center justify-center px-4  sm:px-6 lg:px-8">Want to buy premium Stickers? <a href="./stickerkit.html">Click Here</a></p>
   <!-- header section -->
-  <header class="text-gray-600 body-font mt-8">
-    <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+  <header class="text-gray-600 body-font mt-4">
+    <div class="container mx-auto flex flex-wrap p-2 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
         <img src="./images/Jaspreet.Designs dark.png" alt="Logo" width="160px">
         <!-- <span class="ml-3 text-xl">Portfolio</span> -->
@@ -27,7 +28,7 @@
       </nav>
       <button
         class="PrimaryBtn inline-flex items-center font-medium   mt-4 md:mt-0"><a
-          href="./Jaspreet Singh Saini - UX Resume.pdf" target="_blank"> Resume </a>
+          href="https://drive.google.com/file/d/18ijb8T1B1UXtDIHcw3c-YUDx3uVdsZA4/view?usp=share_link" target="_blank"> Resume </a>
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           class="w-4 h-4 ml-1" viewBox="0 0 24 24">
           <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -67,7 +68,7 @@ I have a solid understanding of the design process and am experienced in designi
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900" id="Experience">Experience</h1>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 " id="Experience">Experience</h1>
       </div>
 
       <div class="flex flex-wrap -m-4">
@@ -77,7 +78,7 @@ I have a solid understanding of the design process and am experienced in designi
               <h2 class="text-2xl text-gray-900 text-lg title-font font-medium">Indianpreneur</h2>
             </div>
             <div class="flex-grow">
-              <a class="text-lg mt-1 text-indigo-500 inline-flex items-center">Magazine Designer Intern
+              <a class="exTitle text-lg mt-1  inline-flex items-center">Magazine Designer Intern
               </a>
               <p class="leading-relaxed text-justify">The first month of my internship I did research regarding the magazine design.
                  Then, I ve started designing magazines, The first magazine is related to Top Influential Indianpreneurs and
@@ -97,7 +98,7 @@ I have a solid understanding of the design process and am experienced in designi
               <h2 class="text-2xl text-gray-900 text-lg title-font font-medium">Muniversiti EdCorp</h2>
             </div>
             <div class="flex-grow">
-              <a class="text-lg mt-1 text-indigo-500 inline-flex items-center">Graphic Designing Intern
+              <a class="exTitle text-lg mt-1  inline-flex items-center">Graphic Designing Intern
               </a>
               <p class="leading-relaxed text-justify">The first month was a training period where I grasp
                 so many different concepts using Figma & Adobe illustrator. After that, I started
@@ -120,7 +121,7 @@ I have a solid understanding of the design process and am experienced in designi
                 Student Chapter (MU-ACM)</h2>
             </div>
             <div class="flex-grow">
-              <a class="text-lg mt-1 text-indigo-500 inline-flex items-center">Assistant Graphics Head
+              <a class="exTitle text-lg mt-1  inline-flex items-center">Assistant Graphics Head
               </a>
               <p class="leading-relaxed text-justify">Being a Newbie in college, I got a thick opportunity
                 to showcase my skills. I was interviewed for Graphic Designing Executive Member. I got
@@ -137,11 +138,11 @@ I have a solid understanding of the design process and am experienced in designi
         <div class="p-4 md:w-1/3">
           <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
             <div class="flex items-center mb-1">
-              <h2 class="text-2xl text-gray-900 text-lg title-font font-medium">Students'​ Technical and Innovation Club
+              <h2 class=" text-2xl text-gray-900 text-lg title-font font-bold">Students'​ Technical and Innovation Club
                 (STIC)</h2>
             </div>
             <div class="flex-grow">
-              <a class="text-lg mt-1 text-indigo-500 inline-flex items-center">Graphic Designing - Student Mentor
+              <a class="exTitle text-lg mt-1  inline-flex items-center">Graphic Designing - Student Mentor
               </a>
               <p class="leading-relaxed text-justify">My role as a Student Mentor, in the Graphic Designing team
                 I have designed Instagram carousel posts with that, designed posters for events, and an event banner for
@@ -244,7 +245,7 @@ I have a solid understanding of the design process and am experienced in designi
               class="PrimaryBtn flex mx-auto  text-xl">Submit</button>
           </div>
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-            <a class="text-indigo-500 text-m font-medium" href="mailto:jaspreet.work099@gmail.com" target="_blank">jaspreet.work099@gmail.com</a>
+            <a class="exTitle  text-m font-medium" href="mailto:jaspreet.work099@gmail.com" target="_blank">jaspreet.work099@gmail.com</a>
 
             <p class="leading-normal my-5">
               Indore(M.P.), India
