--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <p class="stickertag flex h-10 items-center justify-center px-4  sm:px-6 lg:px-8">Want to buy premium Stickers? <a href="./stickerkit.html">Click Here</a></p>
+  <p class="stickertag flex h-10 items-center justify-center px-4  sm:px-6 lg:px-8 ">Want to buy premium Stickers? <a href="" >Click Here</a></p>
   <!-- header section -->
   <header class="text-gray-600 body-font mt-4">
     <div class="container mx-auto flex flex-wrap p-2 flex-col md:flex-row items-center">
@@ -44,7 +44,7 @@
         class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-2 font-bold text-gray-900">Jaspreet Singh Saini
         </h1>
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-light text-gray-900">UX/UI Designer
+        <h1 class="exTitle title-font sm:text-4xl text-3xl mb-4 font-light ">UX/UI Designer
         </h1>
         <p class="mb-10 leading-relaxed font-medium">I’m a UX/UI Designer with over 1.5+ years of experience crafting beautiful User-friendly Digital Experiences that make sense.
 
