--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <p class="stickertag flex h-10 items-center justify-center px-4  sm:px-6 lg:px-8 ">Want to buy premium Stickers? <a href="" >Click Here</a></p>
+  <!-- <p class="stickertag flex h-10 items-center justify-center px-4  sm:px-6 lg:px-8 ">Want to buy premium Stickers? <a href="" >Click Here</a></p> -->
   <!-- header section -->
   <header class="text-gray-600 body-font mt-4">
     <div class="container mx-auto flex flex-wrap p-2 flex-col md:flex-row items-center">
