hero section divied into grid

--- a/Index2.html
+++ b/Index2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,19 +11,29 @@
     <link rel="icon" href="./images/Pfp-icon.ico" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
+
 <body>
     <!-- navbar-start  -->
     <div id="navbar"></div>
     <!-- navbar-end -->
 
-heyloo 
+    <div class="hero-section">
+        <div class="gird-halves grid grid-cols-2">
+            <div class="bg-white">
+                <p>Turning ideas into reality, one pixel at a time.</p>
+                <p>Crafting beautiful designs that are both functional and stunning.</p>
+            </div>
+            <div class="bg-green">hey</div>
+        </div>
+    </div>
 
 
 
-<script>
-    $(function () {
-         $("#navbar").load("include/navbar.html");
-    });
-</script>
+    <script>
+        $(function () {
+            $("#navbar").load("include/navbar.html");
+        });
+    </script>
 </body>
+
 </html>
