--- a/Index2.html
+++ b/Index2.html
@@ -19,11 +19,21 @@
 
     <div class="hero-section">
         <div class="gird-halves grid grid-cols-2">
-            <div class="bg-white">
-                <p>Turning ideas into reality, one pixel at a time.</p>
-                <p>Crafting beautiful designs that are both functional and stunning.</p>
+            <div class="bg-white object-fill">
+                <img src="./images/Landing page arrow.svg" alt="img" class="animate-bounce 1s absolute left-1/4 top-1/4 m-28 p-6">
+                <p class="p1 mt-32 ml-12 ">Turning <span class="s1">ideas</span> into <br> <span class="s2">reality</span>, one pixel <br> at a time.</p>
+                <p class="p2 mt-4 ml-12">Crafting <span>beautiful designs</span> that are <br> both functional and stunning.</p>
+            </div> 
+            <div class="bg-green grid h-screen place-items-center">
+                <div class="rec relative blur-2xl animate-pulse "></div>
+                <img src="./images/Hero-img.png" alt="img" class="absolute">
+                <img src="./images/Hero-adobe_illustrator.png" alt="" class="absolute left-2/4 top-3/4 m-24 drop-shadow-2xl">
+                <img src="./images/Hero-adobe_photoshop.png" alt="" class="absolute left-3/4 top-1/3 m-44 drop-shadow-2xl">
+                <img src="./images/Hero-behance.png" alt="" class="absolute left-3/4 top-36 ml-32 drop-shadow-2xl">
+                <img src="./images/Hero-figma-dynamic-color.png" alt="" class="absolute left-2/4 top-1/4 ml-12 drop-shadow-2xl">
+                <img src="./images/Hero-Figma tool icon set.svg" alt="" class="absolute left-3/4 top-2/3 m-40 drop-shadow-2xl hover:animate-bounce">
+                
             </div>
-            <div class="bg-green">hey</div>
         </div>
     </div>
 
