Hero section image updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div> 
             <div class="bg-green grid h-screen place-items-center">
                 <div class="rec relative blur-2xl animate-pulse "></div>
-                <img src="./images/Hero-img.png" alt="img" class="absolute">
+                <img src="./images/Hero-Img.svg" alt="img" class="absolute">
                 <img src="./images/Hero-adobe_illustrator.png" alt="" class="absolute left-2/4 top-3/4 m-24 drop-shadow-2xl">
                 <img src="./images/Hero-adobe_photoshop.png" alt="" class="absolute left-3/4 top-1/3 m-44 drop-shadow-2xl">
                 <img src="./images/Hero-behance.png" alt="" class="absolute left-3/4 top-36 ml-32 drop-shadow-2xl">
