arrow fixed and experience page added

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <div class="hero-section">
         <div class="gird-halves grid grid-cols-2">
             <div class="bg-white object-fill">
-                <img src="./images/Landing page arrow.svg" alt="img" class="animate-bounce 1s absolute left-1/4 top-1/4 m-28 p-6">
-                <p class="p1 mt-32 ml-12 ">Turning <span class="s1">ideas</span> into <br> <span class="s2">reality</span>, one pixel <br> at a time.</p>
+                <div class="flex ">
+                <p class="p1 mt-32 ml-12  ">Turning <span class="s1">ideas</span> into <br> <span class="s2">reality</span>, one pixel <br> at a time. </p> <span>                
+                    <img src="./images/Landing page arrow.svg" alt="img" class="animate-bounce relative top-[200px]">
+                </span> </div>
                 <p class="p2 mt-4 ml-12">Crafting <span>beautiful designs</span> that are <br> both functional and stunning.</p>
-                <button class="btn ml-12 mt-4">Know more about me</button>
+                <button class="btn ml-12 mt-4"> <a href="./pages/experience.html">Know more about me</a> </button>
                 <!-- <div class="">
                     <div class="first">know more about me</div>
                     <div class="second"></div>
