--- a/pages/experience.html
+++ b/pages/experience.html
@@ -19,8 +19,30 @@
 
     <!-- about me  -->
     <div class="main-section m-16">
-        <h1 class="title flex items-center">About <Span>Me</Span> <span class="relative top-[-28px]"> <img src="../images/Scrible lines.svg" alt=""> </span> </h1>
-        
+        <h1 class="title flex items-center gap-2">About <Span> Me </Span> <span class="relative top-[-28px]"> <img
+                    src="../images/Scrible lines.svg" alt=""> </span> </h1>
+        <p class="Exp-para">This is Jaspreet Singh Saini from India. I am a <span>UI/UX designer</span>, with over 1 Years of
+            experience.
+            <br><br>
+            Currently, a <span>final-year college student</span> studying Bachelor of Computer Application from Medi-Caps University,
+            Indore. I am always fascinated by design and <span>passionate about</span>  exploring and learning the latest cool things.
+            <br><br>
+            <span>I have started my design journey</span>  from March 2021, in first year of college club(MU-ACM) as a Graphic
+            Designer Executive, after which I was promoted as Assistant Graphics Head in October 2021 & worked with
+            different teams i.e., Marketing, Technical and of course designing to get the best output for organisation .
+            Then I Got my first internship where I got training of basic to advance fundamentals of designing and I got
+            introduced to UI/UX Design. I have more than two years of professional working experience.
+            <br><br>
+            I love to make a design that is more <span>user-friendly and visually appealing</span> . I focused on consistency all over
+            the product. I have a good understanding of the design process and am <span>experienced in designing user
+            interfaces, wireframes, and prototyping. </span>  I have good experience with <span>Figma</span> , Adobe Illustrator, Adobe
+            Photoshop, and how to build webpages with Front-end Development. I am highly motivated and capable of
+            working in a fast-paced environment.
+            <br><br>
+            I love to contribute in <span>open-source </span> and participating in Hackathons, because this is where we can push our
+            limits, Recently my team won a track price at HACKTHISFALL 3.0, & in that hackathon I have designed the UI
+            with 3-4 Iterations.
+        </p>
     </div>
 
 
