--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Jaspreet.Designs Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.tailwindcss.com"></script> <!-- TailwindCSS -->
-    <link rel="icon" href="./images/Pfp-icon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/Hero-Figma tool icon set.svg" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
@@ -16,7 +16,7 @@
     <!-- navbar-start  -->
     <div id="navbar"></div>
     <!-- navbar-end -->
-
+    
     <div class="hero-section">
         <div class="gird-halves grid grid-cols-2">
             <div class="bg-white object-fill">
@@ -32,6 +32,7 @@
                     <div class="Third"></div>
                 </div> -->
             </div> 
+        
             <div class="bg-green grid h-screen place-items-center">
                 <div class="rec relative blur-2xl animate-pulse "></div>
                 <img src="./images/Hero-Img.svg" alt="img" class="absolute">
