--- a/pages/experience.html
+++ b/pages/experience.html
@@ -8,7 +8,7 @@
     <title>Jaspreet.Designs Portfolio</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.tailwindcss.com"></script> <!-- TailwindCSS -->
-    <link rel="icon" href="./images/Pfp-icon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/Hero-Figma tool icon set.svg" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
 
     <!-- about me  -->
     <div class="main-section m-16">
-        <h1 class="title flex items-center gap-2">About <Span> Me </Span> <span class="relative top-[-28px]"> <img
+        <h1 class="title flex items-center gap-2">About <Span> Me </Span> <span class="relative left-[-10px] top-[-32px]"> <img
                     src="../images/Scrible lines.svg" alt=""> </span> </h1>
         <p class="Exp-para">This is Jaspreet Singh Saini from India. I am a <span>UI/UX designer</span>, with over 1 Years of
             experience.
