--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Jaspreet.Designs Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.tailwindcss.com"></script> <!-- TailwindCSS -->
-    <link rel="icon" href="./images/Hero-Figma tool icon set.svg" type="image/x-icon">
+    <link rel="icon" href="./images/Hero-Figma tool icon " type="image/x-icon">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
