work experience title added

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -45,6 +45,11 @@
         </p>
     </div>
 
+    <div class="main-section m-16 mt-24">
+        <h1 class="title flex items-center gap-2">Work <Span> Experience </Span> <span class="relative left-[-10px] top-[-32px]"> <img
+                    src="../images/Scrible lines.svg" alt=""> </span> </h1>
+    </div>
+
 
     <script>
         $(function () {
