About me: Experience timeline updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="./images/Landing page arrow.svg" alt="img" class="animate-bounce relative top-[200px]">
                 </span> </div>
                 <p class="p2 mt-4 ml-12">Crafting <span>beautiful designs</span> that are <br> both functional and stunning.</p>
-                <button class="btn ml-12 mt-4"> <a href="./pages/experience.html">Know more about me</a> </button>
+                <button class="btn ml-12 mt-4"> <a href="./pages/about-me.html">Know more about me</a> </button>
                 <!-- <div class="">
                     <div class="first">know more about me</div>
                     <div class="second"></div>
