--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -100,7 +100,7 @@
                 <ol class="bdr relative  ml-8 mt-[-40px]">
                     <li class="mb-10 ml-6">
                         <div class="dotInPink absolute w-6 h-6 rounded-2xl top-[28%] -left-[0.8rem]"></div>
-                        <p class="Exp-time absolute -left-[12.5rem] top-[26%] p-0 m-0 ">June 2022 to <br> September 2022</p>
+                        <p class="Exp-time absolute -left-[12.5rem] top-[26%] p-0 m-0 ">November 2021  <br>to February 2022</p>
                         <div class="Exp-card ml-8 ">
 
                             <p class="Exp-card-position">Graphic Designing (Intern) </p>
@@ -117,7 +117,7 @@
                 <ol class="bdr relative  ml-8 mt-[-40px]">
                     <li class="mb-10 ml-6">
                         <div class="dotInPink absolute w-6 h-6 rounded-2xl top-[35%] -left-[0.8rem]"></div>
-                        <p class="Exp-time absolute -left-[12.5rem] top-[33%] p-0 m-0 ">June 2022 to <br> September 2022</p>
+                        <p class="Exp-time absolute -left-[12.5rem] top-[33%] p-0 m-0 ">March 2021 to <br> August 2022</p>
                         <div class="Exp-card ml-8 ">
 
                             <p class="Exp-card-position">Assistant Graphics Head</p>
@@ -134,7 +134,7 @@
                 <ol class="bdr relative  ml-8 ">
                     <li class="mb-10 ml-6">
                         <div class="dotInPink absolute w-6 h-6 rounded-2xl top-[30%] -left-[0.8rem]"></div>
-                        <p class="Exp-time absolute -left-[12.5rem] top-[28%] p-0 m-0 ">June 2022 to <br> September 2022</p>
+                        <p class="Exp-time absolute -left-[12.5rem] top-[28%] p-0 m-0 ">August 2021 to <br> May 2022</p>
                         <div class="Exp-card ml-8 ">
 
                             <p class="Exp-card-position">Graphic Designing - Student Mentor</p>
