Project added in portfolio

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,20 +23,35 @@
                 class="relative left-[-10px] top-[-32px]"> <img src="../images/Scrible lines.svg" alt=""> </span> </h1>
 
                 <div class="grid-cards mt-10 grid grid-cols-3">
+
+                    <div class="card max-w-sm ">
+                        <img class="w-full card-img" src=" https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/62e935169916591.6454cfae55299.png" alt="img">
+                        <div class="px-6 py-4">
+                          <div class="card-heading font-bold text-xl mb-2">BudgetStay: Budget-Friendly Accommodation</div>
+                          <p class="card-text text-gray-700 text-base">
+                            Nowadays, finding a space to live has become so much easier. But you don’t get the guaranty of being secure and safe.                        </div>
+                        <div class="px-5  pb-3">
+                            <span class="inline-block skill-tag">Product Design</span>
+                          <span class="inline-block skill-tag ">Figma</span>
+                          <span class="inline-block skill-tag">UI Design</span>
+                          <span class="inline-block skill-tag">User Flow</span>
+                        </div>
+                       <a href="https://www.behance.net/gallery/169916591/BudgetStay-Budget-Friendly-Accommodation" target="_blank" class="px-6 pb-4 read-btn flex items-center gap-2">Read More <img src="../images/Read more arrow.svg" alt=""></a>
+                      </div>
+
                     <div class="card max-w-sm ">
                         <img class="w-full card-img" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/38def7165266659.6404c58263476.jpg" alt="img">
                         <div class="px-6 py-4">
-                          <div class="card-heading font-bold text-xl mb-2">BudgetStay: UI Design and userflow</div>
+                          <div class="card-heading font-bold text-xl mb-2">Add product app design</div>
                           <p class="card-text text-gray-700 text-base">
                             Easily manage your inventory and add new products with just a few clicks. This is the "Add product app design" </p>
                         </div>
-                        <div class="px-6 pb-3">
-                          <span class="inline-block skill-tag">UI Design</span>
-                          <span class="inline-block skill-tag ">Logo Design</span>
-                          <span class="inline-block skill-tag">Figma & FigJam</span>
+                        <div class="px-5  pb-3">
+                            <span class="inline-block skill-tag">App UI Design</span>
+                            <span class="inline-block skill-tag ">Product </span>
+                            <span class="inline-block skill-tag">Figma & FigJam</span>
                         </div>
-                       <a href="https://www.behance.net/gallery/165266659/Add-Product-App-Design" target="_blank" class="px-6 pb-4 read-btn flex items-center gap-2">Read More <img src="../images/Read more arrow.svg" alt=""></a> 
-                        
+                       <a href="https://www.behance.net/gallery/165266659/Add-Product-App-Design" target="_blank" class="px-6 pb-4 read-btn flex items-center gap-2">Read More <img src="../images/Read more arrow.svg" alt=""></a>
                       </div>
                    
                 </div>
