--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -53,6 +53,20 @@
                         </div>
                        <a href="https://www.behance.net/gallery/165266659/Add-Product-App-Design" target="_blank" class="px-6 pb-4 read-btn flex items-center gap-2">Read More <img src="../images/Read more arrow.svg" alt=""></a>
                       </div>
+
+                    <div class="card max-w-sm ">
+                        <img class="w-full card-img" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/98a3fb169925765.6454ebf0de3e6.jpg" alt="img">
+                        <div class="px-6 py-4">
+                          <div class="card-heading font-bold text-xl mb-2">Apna Product UI Design</div>
+                          <p class="card-text text-gray-700 text-base">
+                            Manage your money in the best possible way,Make Every Rupee Count with Budget Tracker. With highly tech enriched application, use voice assistant to record your details.                        </div>
+                        <div class="px-5  pb-3">
+                            <span class="inline-block skill-tag">Website UI Design</span>
+                            <span class="inline-block skill-tag ">Product Design </span>
+                            <span class="inline-block skill-tag">Figma</span>
+                        </div>
+                       <a href="https://www.behance.net/gallery/169925765/Apna-Product-UI-Design" target="_blank" class="px-6 pb-4 read-btn flex items-center gap-2">Read More <img src="../images/Read more arrow.svg" alt=""></a>
+                      </div>
                    
                 </div>
     </div>
