--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -62,7 +62,7 @@
                             Manage your money in the best possible way,Make Every Rupee Count with Budget Tracker. With highly tech enriched application, use voice assistant to record your details.                        </div>
                         <div class="px-5  pb-3">
                             <span class="inline-block skill-tag">Website UI Design</span>
-                            <span class="inline-block skill-tag ">Product Design </span>
+                            <span class="inline-block skill-tag ">Product Design` </span>
                             <span class="inline-block skill-tag">Figma</span>
                         </div>
                        <a href="https://www.behance.net/gallery/169925765/Apna-Product-UI-Design" target="_blank" class="px-6 pb-4 read-btn flex items-center gap-2">Read More <img src="../images/Read more arrow.svg" alt=""></a>
