--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="D3XD-JR-aazkMAE8bnqjlT5LRezKgPUwhBG6I6vmYWw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaspreet.Designs Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
