buy me coffee button added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,7 +24,13 @@
             <h1 class="title flex items-center gap-2">Get In<Span> Touch </Span>  <span
                     class="relative left-[-10px] top-[-32px]"> <img src="../images/Scrible lines.svg" alt=""> </span> </h1>
                     <img src="../images/Saly-10.svg" alt="img" class="-m-14 ml-10">
-        </div>
+              
+                    <div class="socials mt-32 flex items-center justify-center gap-10">
+                      <!-- <img src="../images/Pfp-icon.ico" class="w-8" alt=""> -->
+                      <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="jaspreetdesigns" data-color="#ab0090" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
+
+                    </div>
+                  </div>
     
         <div class="bg-green grid h-screen place-items-center " style="border-left: 2px solid #010100;">
             <div class="w-full max-w-xl ">
