line added at home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="p1 mt-32 ml-12  ">Turning <span class="s1">ideas</span> into <br> <span class="s2">reality</span>, one pixel <br> at a time. </p> <span>                
                     <img src="./images/Landing page arrow.svg" alt="img" class="animate-bounce relative top-[200px]">
                 </span> </div>
-                <p class="p2 mt-4 ml-12">Crafting <span>beautiful designs</span> that are <br> both functional and stunning.</p>
+                <p class="p2 mt-4 ml-12">Crafting <span>beautiful designs <img src="./images/Scrible line.svg" class="relative left-28 " alt=""> </span> that are  both functional and stunning.</p>
                 <button class="btn ml-12 mt-4"> <a href="./pages/about-me.html">Know more about me</a> </button>
                 <!-- <div class="">
                     <div class="first">know more about me</div>
