About me content updated

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -25,9 +25,7 @@
             Years of
             experience.
             <br><br>
-            Currently, a <span>final-year college student</span> studying Bachelor of Computer Application from
-            Medi-Caps University,
-            Indore. I am always fascinated by design and <span>passionate about</span> exploring and learning the latest
+            I am a UI/UX designer with a Bachelor's degree in Computer Application(BCA) from Medi-Caps University, Indore. I am always fascinated by design and <span>passionate about</span> exploring and learning the latest
             cool things.
             <br><br>
             <span>I have started my design journey</span> from March 2021, in first year of college club(MU-ACM) as a
