--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="hero-section">
         <div class="gird-halves grid grid-cols-2">
             <div class="bg-white object-fill">
+                <p class="skill-tag flex ml-12 mt-20 items-center justify-center w-fit text-center">Open for full time UI/UX Designer role 🚀</p>
                 <div class="flex ">
                 <p class="p1 mt-32 ml-12  ">Turning <span class="s1">ideas</span> into <br> <span class="s2">reality</span>, one pixel <br> at a time. </p> <span>                
                     <img src="./images/Landing page arrow.svg" alt="img" class="animate-bounce relative top-[200px]">
