--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -197,14 +197,14 @@
                 <div class="grid-cards mt-10 grid grid-cols-3">
 
                     <div class="card max-w-sm ">
-                      <iframe width="380" height="315" src="https://www.youtube.com/embed/qXgColJ9eyo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="380" height="315" src="https://www.youtube.com/embed/vu7R_owHaNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <div class="px-6 py-4">
-                          <div class="card-heading font-bold text-xl ">Auto Layout Navbar Design In Figma | Timelapse</div>
+                          <div class="card-heading font-bold text-xl ">What's new in the Figma Auto Layout #Config2023 </div>
                         </div>  
                         <div class="px-5 pb-3"> 
                             <span class="inline-block skill-tag">Figma</span>
                           <span class="inline-block skill-tag ">Auto Layout</span>
-                          <span class="inline-block skill-tag">Responsive Navbar </span>
+                          <span class="inline-block skill-tag">New Update</span>
                           <!-- <span class="inline-block skill-tag">User Flow</span> -->
                         </div>
                        <a href="https://youtu.be/qXgColJ9eyo" target="_blank" class="px-5 pb-4 read-btn flex items-center gap-2">Checkout <img src="../images/Read more arrow.svg" alt=""></a>
