--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -207,7 +207,7 @@
                           <span class="inline-block skill-tag">New Update</span>
                           <!-- <span class="inline-block skill-tag">User Flow</span> -->
                         </div>
-                       <a href="https://youtu.be/qXgColJ9eyo" target="_blank" class="px-5 pb-4 read-btn flex items-center gap-2">Checkout <img src="../images/Read more arrow.svg" alt=""></a>
+                       <a href="https://youtu.be/vu7R_owHaNE" target="_blank" class="px-5 pb-4 read-btn flex items-center gap-2">Checkout <img src="../images/Read more arrow.svg" alt=""></a>
                       </div>
                 
                     <div class="card max-w-sm ">
