--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -220,7 +220,7 @@
                           <span class="inline-block skill-tag">No Code</span>
                           <!-- <span class="inline-block skill-tag">User Flow</span> -->
                         </div>
-                       <a href="https://youtu.be/q8gcGLvwIAU" target="_blank" class="px-5 pb-4 read-btn flex items-center gap-2">Checkout <img src="../images/Read more arrow.svg" alt=""></a>
+                       <a href="https://youtu.be/OvwthunB230" target="_blank" class="px-5 pb-4 read-btn flex items-center gap-2">Checkout <img src="../images/Read more arrow.svg" alt=""></a>
                       </div>
                 
                       <div class="card max-w-sm ">
