--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -224,7 +224,7 @@
                           <span class="inline-block skill-tag">Apple Vision Pro</span>
                           <!-- <span class="inline-block skill-tag">User Flow</span> -->
                         </div>
-                       <a href="https://youtu.be/vu7R_owHaNE" target="_blank" class="px-5 pb-4 read-btn flex items-center gap-2">Checkout <img src="../images/Read more arrow.svg" alt=""></a>
+                       <a href="https://youtu.be/hn5nDGUnuKg" target="_blank" class="px-5 pb-4 read-btn flex items-center gap-2">Checkout <img src="../images/Read more arrow.svg" alt=""></a>
                       </div>
                 
                     
